# Reversi

./: CMakeLists.txt
src/: AIPlayer.cpp  Board.h  Game.cpp  GameLogic.cpp  Position.cpp  Position.h  main.cpp
src/Client/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  Client.cpp  Client.h  ClientSettings.txt  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  HumanPlayer.cpp  HumanPlayer.h  LocalPlayer.cpp  LocalPlayer.h  Player.cpp  Player.h  Position.h  RemotePlayer.cpp  RemotePlayer.h  main.cpp
src/Server/: CloseCommand.cpp  CloseCommand.h  Command.h  CommandsManager.cpp  CommandsManager.h  GameRoom.cpp  GameRoom.h  GamesLobby.cpp  GamesLobby.h  JoinCommand.cpp  JoinCommand.h  ListGamesCommand.cpp  ListGamesCommand.h  PlayCommand.cpp  PlayCommand.h  Server.cpp  Server.h  StartCommand.cpp  StartCommand.h  TestCommand.cpp  TestCommand.h  main.cpp
test/: AIPlayerTest.cpp  BoardTest.cpp  GameTest.cpp  HumanPlayerTest.cpp  MainTest.cpp
